projects overflow fixed

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -99,7 +99,7 @@
     animation: floating 3s infinite ease-in-out;
   }
   .projects .Project {
-    width: 90vw;
+    width: 80vw;
     padding: 2rem 1rem;
     margin: 0;
   }
